修改项目包名

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "lwz/laravelUnitTest",
+    "name": "lwz/laravel-unit-test",
     "description": "a laravel  unit test demo",
     "license": "MIT",
     "authors": [
